Project: Fixing Openshift error

--- a/public/project/client/css/style.css
+++ b/public/project/client/css/style.css
@@ -205,6 +205,11 @@ video {
     list-style-type: none;
 }
 
+.allignGlyphicons{
+    margin-top: -5px;
+}
+
+
 
 
 
